# Domly

./: .gitignore  2026-06-16-domly-desktop-assistant-design.md  BUID_LOG.md  CLAUDE.md  Context.md  Feature.md
backend/: package-lock.json  package.json
backend/src/: index.js
backend/src/controllers/: authController.js  commandController.js  voiceController.js
backend/src/middleware/: authMiddleware.js  errorMiddleware.js
backend/src/routes/: auth.js  commands.js  voice.js
backend/src/services/: azureVoice.js  smartrentMCP.js
docs/superpowers/plans/: 2026-06-16-python-sidecar.md
docs/superpowers/specs/: 2026-06-16-domly-desktop-assistant-design.md
domly-backend/: .env  package-lock.json  package.json  server.js
domly-backend/src/models/: User.js
domly-backend/src/routes/: auth.js
domly-desktop/: package-lock.json  package.json
domly-desktop/electron/: package-lock.json  package.json
domly-desktop/electron/src/main/: index.js
domly-desktop/electron/src/preload/: index.js
domly-desktop/python/: .env.example  pyproject.toml
domly-desktop/python/sidecar/: audio_io.py  claude_orchestrator.py  conversation.py  main.py  mcp_client.py  server.py  storage.py  stt.py  tts.py  vad.py  voice_auth.py  wake_word.py
domly-desktop/python/tests/: test_claude_orchestrator.py  test_conversation.py  test_mcp_client.py  test_server.py  test_storage.py  test_stt.py  test_tts.py  test_vad.py  test_voice_auth.py
domly-desktop/src/main/: index.js
domly-desktop/src/preload/: index.js
domly-desktop/src/renderer/: index.html
(+13 files in other folders)
