[project]
name = "domly-sidecar"
version = "0.1.0"
description = "Python voice/AI core for the Domly desktop assitance"
requires-python = ">=3.10"
dependencies = [
    "websockets",
    "sounddevice",
    "numpy",
    "pvporcupine",
    "resemblyzer",
    "openai",
    "anthropic",
    "mcp[cli]",
    "elevenlabs",
    "cryptography",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"